docs: initialize architectural documentation and create supporting update automation scripts